# python-blobopera

./: .buildinfo  .gitignore  .pre-commit-config.yaml  README.md  blob.py  blobopera.backend.backend.html  blobopera.backend.html  blobopera.command.common.html  blobopera.command.html  blobopera.command.jitter.html  blobopera.command.libretto.html  blobopera.command.recording.html  blobopera.html  blobopera.jitter.html  blobopera.languages.generic.html  blobopera.languages.html  blobopera.languages.language.html  blobopera.languages.random.html  blobopera.libretto.html  blobopera.phoneme.html  blobopera.recording.html  blobopera.theme.html  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  requirements.txt  search.html  searchindex.js
.github/ISSUE_TEMPLATE/: new-recording.md
.github/workflows/: coverage.yml  document.yml  lint.yml  release.yml  style.yml  test.yml
_sources/: blobopera.backend.backend.rst.txt  blobopera.backend.rst.txt  blobopera.command.common.rst.txt  blobopera.command.jitter.rst.txt  blobopera.command.libretto.rst.txt  blobopera.command.recording.rst.txt  blobopera.command.rst.txt  blobopera.jitter.rst.txt  blobopera.languages.generic.rst.txt  blobopera.languages.language.rst.txt  blobopera.languages.random.rst.txt  blobopera.languages.rst.txt  blobopera.libretto.rst.txt  blobopera.phoneme.rst.txt  blobopera.recording.rst.txt  blobopera.rst.txt  blobopera.theme.rst.txt
blob/: backend.py  jitter.py  languages.py  lyrics.py  music.py  phonemes.py  themes.py
blob/protocol/: README.md  __init__.py
blob/protocol/code/: __init__.py
blob/protocol/code/enumerations/: phoneme_pb2.py  theme_pb2.py
blob/protocol/code/messages/: jitters_pb2.py  librettos_pb2.py  recording_pb2.py
blob/protocol/enumerations/: phoneme.proto  theme.proto
blob/protocol/messages/: jitters.proto  recording.proto
blobopera/: __init__.py  __main__.py  backend.py  jitter.py  language.py  libretto.py  location.py  phoneme.py  recording.py  theme.py
blobopera/backend/: __init__.py  backend.py
blobopera/command/: __init__.py  common.py  jitter.py  libretto.py  recording.py
blobopera/languages/: __init__.py  generic.py  language.py  random.py
documentation/: conf.py
documentation/command/: README.md
documentation/protocol/: README.md
documentation/protocol/enumerations/: location.proto  theme.proto
documentation/protocol/messages/: librettos.proto  recording.proto
documentation/steganography/: README.md  example.ipynb
tests/: fixture_data_directory.py  fixture_invoke_command.py  fixture_mocked_backend.py  fixture_mocked_static_server.py  fixture_note_lyric_events.py  test_blobopera.py  test_command.py  test_command_jitter.py  test_command_libretto.py  test_command_recording.py  test_language_generic.py  test_language_random.py
tests/test_command_jitter.data/: jitter.binary  jitter.json  jitter.samples
tests/test_command_libretto.data/: libretto.binary  libretto.txt
tests/test_command_recording.data/: recording.json  recording.musicxml  recording.raw
