[tool.poetry]
name = "blobopera"
version = "1.0.3"
description = "Unofficial toolkit for Google Arts & Culture Blob Opera"
authors = ["Helio Machado <0x2b3bfa0@googlemail.com>"]
maintainers = ["Helio Machado <0x2b3bfa0@googlemail.com>"]
readme = "README.md"
license = "GPL-3.0-or-later"
homepage = "https://github.com/0x2b3bfa0/python-blobopera"
repository = "https://github.com/0x2b3bfa0/python-blobopera"
documentation = "https://0x2b3bfa0.github.io/python-blobopera"

[tool.poetry.dependencies]
python = "^3.9"
music21 = "^6.3.0"
requests = "^2.25.1"
matplotlib = "^3.3.3"
numpy = "^1.19.4"
protobuf = "=3.14.0"
proto-plus = "^1.13.0"
typer = {extras = ["all"], version = "^0.3.2"}
colorama = "^0.4.4"
more-itertools = "^8.6.0"

[tool.poetry.group.dev.dependencies]
grpcio-tools = "^1.34.0"
pytest = "^6.2.5"
typer-cli = "^0.0.11"
coverage = {extras = ["toml"], version = "^5.3.1"}
responses = "^0.12.1"
poethepoet = "^0.9.0"
furo = "^2020.12.30-beta.24"
Sphinx = "^3.4.3"

[tool.poetry.scripts]
blobopera = "blobopera.command:application"

[tool.ruff]
line-length = 79

[tool.ruff.lint]
extend-select = ["I"]

[tool.coverage.run]
omit = [".*", "*/site-packages/*"]

[tool.coverage.report]
fail_under = 80

[tool.poe.tasks]
test = "pytest"
coverage = {"shell" = "coverage run -m pytest; coverage report -m"}
document-command = "typer blobopera.command utils docs --output documentation/command/README.md --name blobopera"
document-module-generate = "sphinx-apidoc -feo documentation/module . tests"
document-module-build = "sphinx-build -Wb html -c documentation -d documentation/module/_build/doctrees documentation/module/ documentation/module/_build/html/"
document-module = ["document-module-generate", "document-module-build"]
document = ["document-command", "document-module"]
all = ["coverage", "document"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
